--- a/tests/html/change.200alreadymember.html
+++ b/tests/html/change.200alreadymember.html
@@ -7,7 +7,8 @@
 </HEAD>
 <BODY bgcolor="white"
       dir="ltr">
-<h3>test2@subnets.org is already a list member.</h3><p><center><h2>Test mailing list administration<br>Membership&nbsp;Management... Section</h2></center><hr>
+<h3>test2@subnets.org is already a list member.</h3>
+<p><center><h2>Test mailing list administration<br>Membership&nbsp;Management... Section</h2></center><hr>
 <FORM action="../../../admin/test/members/change" method="POST" enctype="multipart/form-data">
     <input type="hidden" name="csrf_token" value="28020000006973358f5b7333000000746573742b61646d696e3a32393438336562343139313261616265643739663732346634626234663533366137623133623734">
 
