--- a/tests/html/members-add-multi.html
+++ b/tests/html/members-add-multi.html
@@ -8,7 +8,12 @@
 dir="ltr">
 <h5>Successfully subscribed:</h5>
 <ul>
-<li>a@example.net
+    <li>a@example.net
+</ul>
+<p><h5>Error subscribing:</h5>
+<ul>
+    <li>b@example.net -- Already a member
+    <li>fred -- Bad/Invalid email address
 </ul>
 <p><center><h2>Test mailing list administration<br>Membership&nbsp;Management... Section</h2></center><hr>
 <FORM action="../../../admin/test_example.co.uk/members/add" method="POST" enctype="multipart/form-data">
